--- a/source/css/404.css
+++ b/source/css/404.css
@@ -1,3 +1,16 @@
+.err-container {
+	position:relative;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    height:100vh;
+    background:white;
+    color:black;
+    font-family:arial, sans-serif;
+    overflow:hidden;
+    font-size: 20
+}
+
 .nomatch-content {
 	position: absolute;
 	top: calc(50vh - 161px);
